--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "echarts": "^5.5.1",
     "next": "15.1.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
